syntax = "proto3";

package warlock.v1;

option go_package = "github.com/darkpool/warlock/pkg/api/proto;warlockpb";

import "google/protobuf/timestamp.proto";

// MatcherService is the main gRPC service for order matching
service MatcherService {
  // SubmitOrder submits a new order to the matching engine
  rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse);

  // CancelOrder cancels an existing order
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);

  // GetOrderBook retrieves the current order book for a token pair
  rpc GetOrderBook(GetOrderBookRequest) returns (GetOrderBookResponse);

  // StreamMatches streams match events in real-time
  rpc StreamMatches(StreamMatchesRequest) returns (stream MatchEvent);

  // HealthCheck verifies the service is running
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Order represents a buy or sell order
message Order {
  string id = 1;
  string user_address = 2;
  int32 chain_id = 3;
  OrderType order_type = 4;
  string base_token = 5;
  string quote_token = 6;
  string quantity = 7;  // Decimal string for precision
  string price = 8;     // Decimal string for precision
  int32 variance_bps = 9;  // Basis points (100 = 1%)
  string min_price = 10;
  string max_price = 11;
  string filled_quantity = 12;
  string remaining_quantity = 13;
  OrderStatus status = 14;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp expires_at = 16;
}

// OrderType indicates buy or sell
enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_BUY = 1;
  ORDER_TYPE_SELL = 2;
}

// OrderStatus represents the order lifecycle
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_COMMITTED = 2;
  ORDER_STATUS_REVEALED = 3;
  ORDER_STATUS_PARTIALLY_FILLED = 4;
  ORDER_STATUS_FILLED = 5;
  ORDER_STATUS_CANCELLED = 6;
}

// Match represents an executed trade
message Match {
  string id = 1;
  string buy_order_id = 2;
  string sell_order_id = 3;
  string base_token = 4;
  string quote_token = 5;
  string quantity = 6;
  string price = 7;
  SettlementStatus settlement_status = 8;
  string yellow_session_id = 9;
  google.protobuf.Timestamp matched_at = 10;
  google.protobuf.Timestamp settled_at = 11;
  string buyer_address = 12;
  string seller_address = 13;
}

// SettlementStatus represents settlement progress
enum SettlementStatus {
  SETTLEMENT_STATUS_UNSPECIFIED = 0;
  SETTLEMENT_STATUS_PENDING = 1;
  SETTLEMENT_STATUS_SETTLING = 2;
  SETTLEMENT_STATUS_SETTLED = 3;
  SETTLEMENT_STATUS_FAILED = 4;
}

// SubmitOrderRequest submits a new order
message SubmitOrderRequest {
  string user_address = 1;
  int32 chain_id = 2;
  OrderType order_type = 3;
  string base_token = 4;
  string quote_token = 5;
  string quantity = 6;
  string price = 7;
  int32 variance_bps = 8;  // 0-10000 (0% - 100%)
  int64 expires_in_seconds = 9;  // Time to live
  string commitment_hash = 10;
  string order_signature = 11;
  string order_data = 12;  // JSON string
}

// SubmitOrderResponse returns the created order
message SubmitOrderResponse {
  Order order = 1;
  repeated Match immediate_matches = 2;  // Any matches that occurred immediately
}

// CancelOrderRequest cancels an order
message CancelOrderRequest {
  string order_id = 1;
  string user_address = 2;  // For authorization
}

// CancelOrderResponse confirms cancellation
message CancelOrderResponse {
  bool success = 1;
  string message = 2;
}

// GetOrderBookRequest retrieves order book
message GetOrderBookRequest {
  string base_token = 1;
  string quote_token = 2;
  int32 depth = 3;  // Number of price levels to return (default 20)
}

// GetOrderBookResponse returns order book
message GetOrderBookResponse {
  string base_token = 1;
  string quote_token = 2;
  repeated PriceLevel bids = 3;  // Buy orders (descending price)
  repeated PriceLevel asks = 4;  // Sell orders (ascending price)
  google.protobuf.Timestamp timestamp = 5;
}

// PriceLevel aggregates orders at a price point
message PriceLevel {
  string price = 1;
  string quantity = 2;  // Total quantity at this price
  int32 order_count = 3;  // Number of orders at this price
}

// StreamMatchesRequest starts streaming matches
message StreamMatchesRequest {
  string base_token = 1;  // Optional filter
  string quote_token = 2;  // Optional filter
  string user_address = 3;  // Optional: only matches for this user
}

// MatchEvent is streamed when a match occurs
message MatchEvent {
  Match match = 1;
  google.protobuf.Timestamp event_time = 2;
}

// HealthCheckRequest checks service health
message HealthCheckRequest {}

// HealthCheckResponse returns health status
message HealthCheckResponse {
  bool healthy = 1;
  string version = 2;
  int64 uptime_seconds = 3;
  int64 total_orders = 4;
  int64 total_matches = 5;
}
